- Use CsWin32's raw overload for `WritePrivateProfileString()` so we can properly remove keys or entire sections if required.
The friendly overload for CsWin32 doesn't use nullable strings, therefore it can never be used in accordance with the documentation in that null values for key/value equate to the removal of the section/key, respectively.

Using the raw CsWin32 P/Invoke allows us to resolve the issue. Logged upstream as https://github.com/microsoft/CsWin32/issues/1410.

--- a/docs/Get-ADTConfig.mdx
+++ b/docs/Get-ADTConfig.mdx
@@ -48,6 +48,8 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 
 ### Returns the configuration data as a hashtable.
 ## NOTES
+The module must be initialized via `Initialize-ADTModule` prior to calling this function.
+
 An active ADT session is NOT required to use this function.
 
 Tags: psadt<br />
