--- a/docs/Start-ADTProcess.mdx
+++ b/docs/Start-ADTProcess.mdx
@@ -720,8 +720,9 @@ Accept wildcard characters: False
 
 ### -PassThru
 
-If NoWait is not specified, returns an object with ExitCode, STDOut and STDErr output from the process.
-If NoWait is specified, returns an object with Id, Handle and ProcessName.
+If `-NoWait` is not specified, returns an object with ExitCode, StdOut, and StdErr output from the process.
+If `-NoWait` is specified, returns a task that can be awaited.
+Note that a failed execution will only return an object if either `-ErrorAction` is set to `SilentlyContinue`/`Ignore`, or if `-IgnoreExitCodes`/`-SuccessExitCodes` are used.
 
 ```yaml
 Type: SwitchParameter
