- Rework INI functions as suggested by @DanGough.
Rightfully so, making `Set-ADTIniValue` do everything breaks the single-use principal. Even though Microsoft do it with their P/Invoke, we don't need to do it here.

As such, make the removal of sections/keys occur in dedicated functions. Further to this, rename the existing functions from `Get-ADTIniValue`/`Set-ADTIniValue` to `Get-ADTIniSectionKeyValue`/`Set-ADTIniSectionKeyValue`. The old functions are there as wrappers, we'll remove them in 4.2.0.

--- a/docs/Get-ADTEnvironment.mdx
+++ b/docs/Get-ADTEnvironment.mdx
@@ -8,7 +8,7 @@ hide_table_of_contents: false
 ## SYNOPSIS
 
 Retrieves the environment data for the ADT module.
-This function has been replaced by Get-ADTEnvironmentTable and will be removed from a future release.
+This function has been replaced by [Get-ADTEnvironmentTable]. Please migrate your scripts as this will be removed in PSAppDeployToolkit 4.2.0.
 
 ## SYNTAX
 
@@ -22,7 +22,7 @@ The Get-ADTEnvironment function retrieves the environment data for the ADT modul
 This function ensures that the ADT module has been initialized before attempting to retrieve the environment data.
 If the module is not initialized, it throws an error.
 
-This function has been replaced by Get-ADTEnvironmentTable and will be removed from a future release.
+This function has been replaced by [Get-ADTEnvironmentTable]. Please migrate your scripts as this will be removed in PSAppDeployToolkit 4.2.0.
 
 ## EXAMPLES
 
