--- a/docs/Remove-ADTIniSection.mdx
+++ b/docs/Remove-ADTIniSection.mdx
@@ -1,35 +1,33 @@
 ---
-id: Get-ADTIniValue
-title: Get-ADTIniValue
+id: Remove-ADTIniSection
+title: Remove-ADTIniSection
 hide_title: false
 hide_table_of_contents: false
 ---
 
 ## SYNOPSIS
 
-Parses an INI file and returns the value of the specified section and key.
-This function has been replaced by [Get-ADTIniSectionKeyValue]. Please migrate your scripts as this will be removed in PSAppDeployToolkit 4.2.0.
+Opens an INI file and removes the specified section.
 
 ## SYNTAX
 
 ```powershell
-Get-ADTIniValue [-FilePath] <String> [-Section] <String> [-Key] <String> [<CommonParameters>]
+Remove-ADTIniSection [-FilePath] <String> [-Section] <String> [<CommonParameters>]
 ```
 
 ## DESCRIPTION
 
-The Get-ADTIniValue function parses an INI file and returns the value of the specified section and key.
-This function has been replaced by [Get-ADTIniSectionKeyValue]. Please migrate your scripts as this will be removed in PSAppDeployToolkit 4.2.0.
+Opens an INI file and removes the specified section.
 
 ## EXAMPLES
 
 ### EXAMPLE 1
 
 ```powershell
-Get-ADTIniValue -FilePath "$env:ProgramFilesX86\IBM\Notes\notes.ini" -Section 'Notes' -Key 'KeyFileName'
+Remove-ADTIniSection -FilePath "$env:ProgramFilesX86\IBM\Notes\notes.ini" -Section 'Notes'
 ```
 
-This example retrieves the value of the 'KeyFileName' key in the 'Notes' section of the specified INI file.
+Removes the 'Notes' section of the 'notes.ini' file.
 
 ## PARAMETERS
 
@@ -65,22 +63,6 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
-### -Key
-
-Key within the section of the INI file.
-
-```yaml
-Type: String
-Parameter Sets: (All)
-Aliases:
-
-Required: True
-Position: 3
-Default value: None
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
 ### CommonParameters
 
 This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).
@@ -92,9 +74,9 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 ### You cannot pipe objects to this function.
 ## OUTPUTS
 
-### System.String
+### None
 
-### Returns the value of the specified section and key.
+### This function does not return any output.
 ## NOTES
 An active ADT session is NOT required to use this function.
 
@@ -105,4 +87,4 @@ License: https://opensource.org/license/lgpl-3-0
 
 ## RELATED LINKS
 
-[https://psappdeploytoolkit.com/docs/reference/functions/Get-ADTIniValue](https://psappdeploytoolkit.com/docs/reference/functions/Get-ADTIniValue)
+[https://psappdeploytoolkit.com/docs/reference/functions/Remove-ADTIniSection](https://psappdeploytoolkit.com/docs/reference/functions/Remove-ADTIniSection)
