--- a/docs/Remove-ADTFolder.mdx
+++ b/docs/Remove-ADTFolder.mdx
@@ -29,7 +29,7 @@ The function can also delete items recursively if the DisableRecursion parameter
 Remove-ADTFolder -Path "$envWinDir\Downloaded Program Files"
 ```
 
-Deletes all files and subfolders in the Windows\Downloads Program Files folder.
+Deletes all files and subfolders in the Windows\Downloaded Program Files folder.
 
 ### EXAMPLE 2
 
